Fix textarea inputs collapsing linebreaks when displayed
All the user freetext entry would display without line breaks when it
was shown back to them. I also fixed the vehicle request details so that
it's a textarea now.

Resolves: #41

--- a/static/css/common.css
+++ b/static/css/common.css
@@ -37,6 +37,10 @@ h1 {
   font-size: 2em;
 }
 
+p.user-text {
+  white-space: pre-line;
+}
+
 input:not([type=checkbox]):focus, select:focus, textarea:focus {
   outline: 3px solid #0ca074;
 }
